@@ -11,6 +11,8 @@
 
 #include "mini.h"
 
+#ifndef DISABLE_JIT
+
 #ifndef DISABLE_SSA
 
 #define USE_ORIGINAL_VARS
@@ -1285,3 +1287,4 @@ mono_ssa_strength_reduction (MonoCompile *cfg)
 
 #endif /* DISABLE_SSA */
 
+#endif /* DISABLE_JIT */
